samples/_failures_safe/1761542216_3e24fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83089c2a.c: In function ‘main’:
./samples/SAFE/__tmp_83089c2a.c:163:24: error: expected ‘;’ at end of input
  163 |         graph[v][u] = w
      |                        ^
      |                        ;
./samples/SAFE/__tmp_83089c2a.c:163:9: error: expected declaration or statement at end of input
  163 |         graph[v][u] = w
      |         ^~~~~
./samples/SAFE/__tmp_83089c2a.c:163:9: error: expected declaration or statement at end of input
